feat(meta): add resourceVersion, generation, uid to Meta struct
- Renames `Revision` to `Generation` to make it less ambiguous.
  `Generation` field continues to track spec mutations overt time.
- Adds new field: `ResourceVersion` which increments on ALL updates to
  the resource, including status.
- Adds new field `uid` which is a unique resource identifier.
- Scheduler: re-reschdules tasks on task label/selector changes.
- Conditions: Conditions reporting can only be made by a lease holder.
  This solves the problem where stale tasks on old nodes are still able
  to update the status filed (through condition) of a task.
- Lease: Lease service requries the node it when calling `Release()`.
  This helps mitigate risk of releasing a lock that is aquired and
  active on another node.
