# api/services/nodes/v1/nodes.swagger.json
@@ -256,11 +256,18 @@
                     },
                     "updated": {
                       "type": "string",
-                      "format": "date-time"
+                      "format": "date"
                     },
-                    "revision": {
+                    "generation": {
                       "type": "string",
                       "format": "uint64"
+                    },
+                    "resourceVersion": {
+                      "type": "string",
+                      "format": "uint64"
+                    },
+                    "uid": {
+                      "type": "string"
                     }
                   }
                 },
@@ -338,11 +345,18 @@
                     },
                     "updated": {
                       "type": "string",
-                      "format": "date-time"
+                      "format": "date"
                     },
-                    "revision": {
+                    "generation": {
                       "type": "string",
                       "format": "uint64"
+                    },
+                    "resourceVersion": {
+                      "type": "string",
+                      "format": "uint64"
+                    },
+                    "uid": {
+                      "type": "string"
                     }
                   }
                 },
@@ -536,9 +550,9 @@
         "msg": {
           "type": "string"
         },
-        "observedGeneration": {
+        "observedResourceVersion": {
           "type": "string",
-          "format": "int64"
+          "format": "uint64"
         },
         "observedAt": {
           "type": "string",
@@ -549,6 +563,9 @@
           "additionalProperties": {
             "type": "string"
           }
+        },
+        "reporter": {
+          "type": "string"
         }
       }
     },
@@ -740,11 +757,18 @@
         },
         "updated": {
           "type": "string",
-          "format": "date-time"
+          "format": "date"
         },
-        "revision": {
+        "generation": {
           "type": "string",
           "format": "uint64"
+        },
+        "resourceVersion": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "uid": {
+          "type": "string"
         }
       }
     },
